add package name to demo files

--- a/2017_09_19_R_UserGroup_Panama/demo/demo1_tidyquant.html
+++ b/2017_09_19_R_UserGroup_Panama/demo/demo1_tidyquant.html
@@ -124,8 +124,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="whats-it-used-for" class="section level1">
-<h1>What’s It Used For?</h1>
+<div id="tidyquant-whats-it-used-for" class="section level1">
+<h1>tidyquant: What’s It Used For?</h1>
 <ol style="list-style-type: decimal">
 <li><p>Getting web data from Yahoo! Finance, FRED Database, Quandl and more</p></li>
 <li><p>Tidy application of financial and time series functions from <code>xts</code>, <code>zoo</code>, <code>quantmod</code>, <code>TTR</code> and <code>PerformanceAnalytics</code></p></li>
