--- a/2017_09_19_R_UserGroup_Panama/demo/demo2_timetk.html
+++ b/2017_09_19_R_UserGroup_Panama/demo/demo2_timetk.html
@@ -124,8 +124,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="whats-it-used-for" class="section level1">
-<h1>What’s It Used For?</h1>
+<div id="timetk-whats-it-used-for" class="section level1">
+<h1>timetk: What’s It Used For?</h1>
 <ol style="list-style-type: decimal">
 <li><p>Coercing (converting) between time classes in R (e.g. between <code>tbl</code>, <code>xts</code>, <code>zoo</code>, <code>ts</code>)</p></li>
 <li><p>Time series machine learning</p></li>
