--- a/2017_09_19_R_UserGroup_Panama/demo/demo3_sweep.html
+++ b/2017_09_19_R_UserGroup_Panama/demo/demo3_sweep.html
@@ -124,8 +124,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="whats-it-used-for" class="section level1">
-<h1>What’s It Used For?</h1>
+<div id="sweep-whats-it-used-for" class="section level1">
+<h1>sweep: What’s It Used For?</h1>
 <p>Tidying the <code>forecast</code> package workflow. Like <code>broom</code> is to <code>stats</code> library, <code>sweep</code> is to <code>forecast</code> package.</p>
 </div>
 <div id="load-libraries" class="section level1">
