--- a/2017_09_19_R_UserGroup_Panama/demo/demo4_tibbletime.html
+++ b/2017_09_19_R_UserGroup_Panama/demo/demo4_tibbletime.html
@@ -124,8 +124,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="whats-it-used-for" class="section level1">
-<h1>What’s It Used For?</h1>
+<div id="tibbletime-whats-it-used-for" class="section level1">
+<h1>tibbletime: What’s It Used For?</h1>
 <ol style="list-style-type: decimal">
 <li><p>The future of “tidy” time series analysis. New class <code>tbl_time</code> rests on top of <code>tbl</code> and makes tibbles time awaqe.</p></li>
 <li><p>Can use a series of special tidy time series functions including <code>time_filter</code>, <code>time_summarize</code>, <code>as_period</code>, <code>time_collapse</code> and <code>tmap</code>. More coming!!!</p></li>
